--- a/src/main/resources/monopoly/interface/GamePlay.fxml
+++ b/src/main/resources/monopoly/interface/GamePlay.fxml
@@ -8,6 +8,7 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.effect.ImageInput?>
 <?import javafx.scene.image.Image?>
@@ -33,9 +34,14 @@
                      <items>
                         <MenuItem mnemonicParsing="false" onAction="#newGame" text="New Game" />
                         <CheckMenuItem fx:id="alertCheck" mnemonicParsing="false" onAction="#alertSwitch" selected="true" text="Alerts" />
-                        <CheckMenuItem fx:id="actionLogChek" mnemonicParsing="false" onAction="#actionLogSwitch" selected="true" text="Action log" />
+                        <CheckMenuItem fx:id="actionLogCheck" mnemonicParsing="false" onAction="#actionLogSwitch" selected="true" text="Action log" />
                         <MenuItem mnemonicParsing="false" onAction="#exit" text="Close" />
                      </items>
+                  </Menu>
+                  <Menu mnemonicParsing="false">
+                     <graphic>
+                        <RadioButton fx:id="pauseCheck" mnemonicParsing="false" onAction="#pause" text="Pause" />
+                     </graphic>
                   </Menu>
                   <Menu mnemonicParsing="false" text="Help">
                      <items>
